<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbnome2"/>
        <EditText
            android:id = "@+id/nome2"
            android:layout_width = "150dp"
            android:layout_height = "wrap_content"
            android:inputType = "text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbrg"/>
        <EditText
            android:id = "@+id/rg"
            android:layout_width = "150dp"
            android:layout_height = "wrap_content"
            android:inputType = "text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbcpf"/>
        <EditText
            android:id = "@+id/cpf"
            android:layout_width = "150dp"
            android:layout_height = "wrap_content"
            android:inputType = "text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbend"/>
        <EditText
            android:id = "@+id/end"
            android:layout_width = "150dp"
            android:layout_height = "wrap_content"
            android:inputType = "text" />
        <Button
            android:id = "@+id/btalterar3"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/btalterar3" />
        <Button
            android:id = "@+id/btexcluir3"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/btexcluir3" />

</LinearLayout>

