<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbnome"/>
        <EditText
            android:id = "@+id/nome"
            android:layout_width = "150dp"
            android:layout_height = "wrap_content"
            android:inputType = "text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbtipo2"/>
        <EditText
            android:id = "@+id/tipo2"
            android:layout_width = "150dp"
            android:layout_height = "wrap_content"
            android:inputType = "text" />
        <Button
            android:id = "@+id/btalterar2"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/btalterar2" />
        <Button
            android:id = "@+id/btexcluir2"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/btexcluir2" />

</LinearLayout>

